[gd_scene load_steps=6 format=3 uid="uid://ben2pehmodvg7"]

[ext_resource type="Script" path="res://scripts/menus/PartySelectionMenu.gd" id="1_pci7g"]
[ext_resource type="Theme" uid="uid://dss6di43qaueh" path="res://media/themes/textBoxTheme.tres" id="2_2v6c6"]
[ext_resource type="PackedScene" uid="uid://cjy7f6gu4m24" path="res://scenes/menus/menuSelectable.tscn" id="3_ctatw"]
[ext_resource type="PackedScene" uid="uid://ds1mawhw2nvsj" path="res://scenes/menus/viewCharacterInCreator.tscn" id="3_u43in"]
[ext_resource type="PackedScene" uid="uid://bewh6v6vi0v30" path="res://scenes/menus/confirmChoice.tscn" id="5_tma1k"]

[node name="PartySelectionMenu" type="CanvasLayer"]
script = ExtResource("1_pci7g")

[node name="Timer" type="Timer" parent="."]

[node name="addMarginContainer" type="MarginContainer" parent="."]
offset_left = 2.0
offset_top = 2.0
offset_right = 89.0
offset_bottom = 18.0

[node name="Panel" type="Panel" parent="addMarginContainer"]
layout_mode = 2
theme = ExtResource("2_2v6c6")

[node name="Label" type="Label" parent="addMarginContainer/Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 75.0
offset_bottom = 18.0
text = "Add member"

[node name="viewMarginContainer" type="MarginContainer" parent="."]
offset_left = 2.0
offset_top = 21.0
offset_right = 89.0
offset_bottom = 37.0

[node name="Panel" type="Panel" parent="viewMarginContainer"]
layout_mode = 2
theme = ExtResource("2_2v6c6")

[node name="Label" type="Label" parent="viewMarginContainer/Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 86.0
offset_bottom = 18.0
text = "View members"

[node name="selectWarrior" parent="." instance=ExtResource("3_ctatw")]
visible = false
offset_left = 3.0
offset_top = 24.0
offset_right = 83.0
offset_bottom = 40.0

[node name="selectKnight" parent="." instance=ExtResource("3_ctatw")]
visible = false
offset_left = 3.0
offset_top = 43.0
offset_right = 83.0
offset_bottom = 59.0

[node name="selectWizard" parent="." instance=ExtResource("3_ctatw")]
visible = false
offset_left = 3.0
offset_top = 62.0
offset_right = 83.0
offset_bottom = 78.0

[node name="selectHunter" parent="." instance=ExtResource("3_ctatw")]
visible = false
offset_left = 3.0
offset_top = 81.0
offset_right = 83.0
offset_bottom = 97.0

[node name="selectThief" parent="." instance=ExtResource("3_ctatw")]
visible = false
offset_left = 3.0
offset_top = 100.0
offset_right = 83.0
offset_bottom = 116.0

[node name="selectCleric" parent="." instance=ExtResource("3_ctatw")]
visible = false
offset_left = 3.0
offset_top = 119.0
offset_right = 83.0
offset_bottom = 135.0

[node name="viewCharacter1" parent="." instance=ExtResource("3_u43in")]
visible = false
offset_left = 4.0
offset_top = 21.0
offset_right = 80.0
offset_bottom = 141.0

[node name="viewCharacter2" parent="." instance=ExtResource("3_u43in")]
visible = false
offset_left = 83.0
offset_top = 21.0
offset_right = 159.0
offset_bottom = 141.0

[node name="viewCharacter3" parent="." instance=ExtResource("3_u43in")]
visible = false
offset_left = 162.0
offset_top = 21.0
offset_right = 238.0
offset_bottom = 141.0

[node name="viewCharacter4" parent="." instance=ExtResource("3_u43in")]
visible = false
offset_left = 241.0
offset_top = 21.0
offset_right = 317.0
offset_bottom = 141.0

[node name="confirmChoices" parent="." instance=ExtResource("5_tma1k")]
visible = false
offset_left = 280.0
offset_top = 217.0
offset_right = 312.0
offset_bottom = 235.0

[node name="classDescriptionMarginContainer" type="MarginContainer" parent="."]
offset_left = 97.0
offset_top = 24.0
offset_right = 308.0
offset_bottom = 95.0

[node name="Panel" type="Panel" parent="classDescriptionMarginContainer"]
layout_mode = 2
theme = ExtResource("2_2v6c6")

[node name="Label" type="Label" parent="classDescriptionMarginContainer/Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 207.0
offset_bottom = 69.0
autowrap_mode = 2

[node name="header" type="MarginContainer" parent="."]
offset_left = 97.0
offset_top = 2.0
offset_right = 224.0
offset_bottom = 18.0

[node name="Panel" type="Panel" parent="header"]
layout_mode = 2
theme = ExtResource("2_2v6c6")

[node name="Label" type="Label" parent="header/Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 125.0
offset_bottom = 18.0
text = "sdfsdf"

[node name="ageYoung" type="MarginContainer" parent="."]
offset_left = 2.0
offset_top = 42.0
offset_right = 70.0
offset_bottom = 58.0

[node name="Panel" type="Panel" parent="ageYoung"]
layout_mode = 2
theme = ExtResource("2_2v6c6")

[node name="Label" type="Label" parent="ageYoung/Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 61.0
offset_bottom = 18.0
text = "Young"

[node name="ageAdult" type="MarginContainer" parent="."]
offset_left = 2.0
offset_top = 62.0
offset_right = 70.0
offset_bottom = 78.0

[node name="Panel" type="Panel" parent="ageAdult"]
layout_mode = 2
theme = ExtResource("2_2v6c6")

[node name="Label" type="Label" parent="ageAdult/Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 61.0
offset_bottom = 18.0
text = "Adult"

[node name="ageOld" type="MarginContainer" parent="."]
offset_left = 2.0
offset_top = 82.0
offset_right = 70.0
offset_bottom = 98.0

[node name="Panel" type="Panel" parent="ageOld"]
layout_mode = 2
theme = ExtResource("2_2v6c6")

[node name="Label" type="Label" parent="ageOld/Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 61.0
offset_bottom = 18.0
text = "Old"

[node name="ageMods" type="MarginContainer" parent="."]
offset_left = 97.0
offset_top = 99.0
offset_right = 256.0
offset_bottom = 176.0
theme = ExtResource("2_2v6c6")

[node name="Panel" type="Panel" parent="ageMods"]
layout_mode = 2
theme = ExtResource("2_2v6c6")

[node name="strModLabel" type="Label" parent="ageMods/Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 26.0
offset_right = 121.0
offset_bottom = 42.0
text = "Strength: +1"

[node name="agiModLabel" type="Label" parent="ageMods/Panel"]
offset_left = 2.0
offset_top = 37.0
offset_right = 121.0
offset_bottom = 53.0
text = "Agility: 0"

[node name="intModLabel" type="Label" parent="ageMods/Panel"]
offset_left = 2.0
offset_top = 50.0
offset_right = 121.0
offset_bottom = 66.0
text = "Intelligence: 0"

[node name="lucModLabel" type="Label" parent="ageMods/Panel"]
offset_left = 2.0
offset_top = 62.0
offset_right = 121.0
offset_bottom = 78.0
text = "Luck: -2"

[node name="hpGrowthModLabel" type="Label" parent="ageMods/Panel"]
layout_mode = 2
offset_left = 2.0
offset_top = 2.0
offset_right = 127.0
offset_bottom = 18.0
text = "Health growth: sharp"

[node name="mpGrowthModLabel" type="Label" parent="ageMods/Panel"]
offset_left = 2.0
offset_top = 14.0
offset_right = 127.0
offset_bottom = 30.0
text = "Magic growth: none"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
